@@ -1,3 +1,12 @@
+2016-09-16	"Has anyone ever tasted an `end'?  Are they really bitter?"
+		(2)
+
+		bin/innocent-pear-c++.cc :
+		- factored out the counts of additional modules to compile
+		  and link in the case of `-Xinnocent-pear -doge'; to prepare
+		  for later refactoring
+		- slightly rewrote internal grumpy(...) routine
+
 2016-09-13	"Has anyone ever tasted an `end'?  Are they really bitter?"
 
 		include/innocent-pear/omg.h :
